mt4-trading-api/k8s-cluster/apps/staging/mt4-trading-api-web-staging-kube-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mt4-trading-api-web-staging
  namespace: mt4-trading-api-staging
spec:
  ports:
  - name: http
    port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    app: mt4-trading-api-web-staging
